--- a/imageuploader/src/index.css
+++ b/imageuploader/src/index.css
@@ -1,5 +1,71 @@
+@import url("https://fonts.googleapis.com/css2?family=Mohave:wght@300&family=Montserrat:wght@300;500&family=Poppins:wght@100;300;400&family=Raleway:ital,wght@0,300;0,700;1,400&family=Roboto:ital,wght@0,400;1,100;1,900&display=swap");
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: rgb(240, 240, 240);
+  font-family: "Montserrat", sans-serif;
+  color: rgb(73, 71, 71);
+}
+
+.upload-container {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  margin: 100px auto;
+  text-align: center;
+  background-color: white;
+  box-shadow: 30px 20px 50px 5px;
+  padding: 30px;
+}
+
+small {
+  color: rgb(131, 130, 130);
+}
+.form-upload {
+  margin: 40px 0;
+  background-color: #9e9eff2e;
+  border: 2px dashed #9e9eff90;
+  position: relative;
+}
+
+.form-upload label {
+  color: rgb(131, 130, 130);
+}
+.form-upload input {
+  padding: 80px 60px;
+}
+input[type="file"] {
+  opacity: 0;
+}
+
+.loader {
+  width: 50px;
+  height: 50px;
+  margin: 5px auto;
+  border-radius: 50%;
+  border-left: 5px solid cyan;
+  border-top: 5px solid rgba(0, 255, 255, 0.2);
+  border-bottom: 5px solid rgba(0, 255, 255, 0.2);
+  border-right: 5px solid rgba(0, 255, 255, 0.2);
+  animation: loading 1.1s infinite linear;
+}
+.loader-container {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  margin: 30px auto;
+  box-shadow: 30px 20px 50px 5px;
+  padding: 30px;
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
