--- a/imageuploader/src/index.css
+++ b/imageuploader/src/index.css
@@ -6,18 +6,26 @@ body {
   background-color: rgb(240, 240, 240);
   font-family: "Montserrat", sans-serif;
   color: rgb(73, 71, 71);
-}
 
-.upload-container {
-  width: 100%;
-  max-width: 400px;
+}
+.App{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.uploader-container {
+  display: flex;
+  width: 100%;
+  max-width: 400px;
   margin: 100px auto;
+  flex-direction: column;
   text-align: center;
+  padding: 30px;
   background-color: white;
   box-shadow: 30px 20px 50px 5px;
-  padding: 30px;
 }
 
 small {
@@ -40,6 +48,14 @@ input[type="file"] {
   opacity: 0;
 }
 
+.loader-container {
+  width: 100%;
+  padding: 30px;
+  max-width: 400px;
+  display: flex;
+  margin: 30px auto;
+  box-shadow: 30px 20px 50px 5px;
+}
 .loader {
   width: 50px;
   height: 50px;
@@ -51,14 +67,6 @@ input[type="file"] {
   border-right: 5px solid rgba(0, 255, 255, 0.2);
   animation: loading 1.1s infinite linear;
 }
-.loader-container {
-  width: 100%;
-  max-width: 400px;
-  display: flex;
-  margin: 30px auto;
-  box-shadow: 30px 20px 50px 5px;
-  padding: 30px;
-}
 
 @keyframes loading {
   0% {
@@ -68,4 +76,56 @@ input[type="file"] {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.upload-container {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  margin: 30px auto;
+  box-shadow: 30px 20px 50px 5px;
+  padding: 30px;
+}
+
+.upload-inner {
+  display: flex;
+  flex-direction: column;
+}
+.upload-status {
+  background-color: green;
+  color: white;
+  font-size: 30px;
+  display: flex;
+  margin: 0 auto;
+  text-align: center;
+  transform: rotate(90deg);
+  padding: 8px 15px;
+  border-radius: 50%;
+}
+
+.upload-image img {
+  width: 100%;
+  object-fit: cover;
+  margin: 20px auto;
+}
+.upload-link{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+.upload-link p{
+  background-color: #9e9eff2e;
+  width: 75%;
+  text-align: center;
+  padding: 10px 5px;
+}
+.upload-link button{
+  width: 20%;
+  height: 40px;
+  font-size: 10px;
+  border-radius: 20px;
+  border-style: none;
+  background-color: rgba(55, 37, 216, 0.809);
+  color: white;
 }
